syntax = "proto3";

import "basic.proto";

package network_comms;

service ClientProtocols {
    rpc GetSystemStatus(SystemInfoRequest) returns (SystemInfoResponse);
    rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
    rpc UpdateFile(UpdateFileRequest) returns (UpdateFileResponse);
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
    rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
}

// request for node statuses
message SystemInfoRequest {
}

message CreateFileRequest {
    FileInfo file_info = 1;
}

message UpdateFileRequest {
    FileInfo file_info = 1;
}

message DeleteFileRequest {
    FileInfo file_info = 1;
}

message ReadFileRequest {
    FileInfo file_info = 1;
}

message SystemInfoResponse {
    NodeStatus namenode = 1;
    repeated NodeStatus nodes = 2;
    int64 num_datanodes = 3;
}

message CreateFileResponse {
    GenericReply response = 1;
    repeated NodeList datanode_addrs = 2;
}

message UpdateFileResponse {
    GenericReply response = 1;
    repeated NodeList datanode_addrs = 2;
}

message DeleteFileResponse {
    GenericReply response = 1;
    repeated NodeList datanode_addrs = 2;
}

message ReadFileResponse {
    GenericReply response = 1;
    repeated NodeList datanode_addrs = 2;
}
